--- a/relational-graphql/Cargo.toml
+++ b/relational-graphql/Cargo.toml
@@ -6,8 +6,9 @@ authors = ["Jeb Bearer <jeb.bearer@gmail.com>"]
 
 [features]
 default = ["postgres"]
-postgres = []
-mocks = []
+sql = ["convert_case", "futures", "itertools", "take_mut"]
+postgres = ["sql", "async-postgres", "async-std", "bytes", "tokio-postgres"]
+mocks = ["sql"]
 
 [dependencies]
 async-graphql = "5.0"
@@ -24,14 +25,16 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 # SQL dependencies
-async-postgres = "0.5"
-async-std = { version = "1.12", features = ["attributes"] }
-bytes = "0.5"
-convert_case = "0.6"
-futures = "0.3"
-itertools = "0.10"
-take_mut = "0.2"
-tokio-postgres = { version = "0.5", default-features = false, features = ["runtime"] }
+convert_case = { version = "0.6", optional = true }
+futures = { version = "0.3", optional = true }
+itertools = { version = "0.10", optional = true }
+take_mut = { version = "0.2", optional = true }
+
+# Postgres dependencies
+async-postgres = { version = "0.5", optional = true }
+async-std = { version = "1.12", features = ["attributes"], optional = true }
+bytes = { version = "0.5", optional = true }
+tokio-postgres = { version = "0.5", default-features = false, features = ["runtime"], optional = true }
 
 [dev-dependencies]
 proptest = "1.1"
