--- a/relational-graphql/Cargo.toml
+++ b/relational-graphql/Cargo.toml
@@ -4,10 +4,15 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Jeb Bearer <jeb.bearer@gmail.com>"]
 
+[[example]]
+name = "library"
+required-features = ["examples"]
+
 [features]
 default = ["postgres"]
-sql = ["convert_case", "futures", "itertools", "take_mut"]
+sql = ["convert_case", "futures", "itertools", "rand", "take_mut"]
 postgres = ["sql", "async-postgres", "async-std", "bytes", "tokio-postgres"]
+examples = ["postgres", "clap", "url"]
 mocks = ["sql"]
 
 [dependencies]
@@ -28,6 +33,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 convert_case = { version = "0.6", optional = true }
 futures = { version = "0.3", optional = true }
 itertools = { version = "0.10", optional = true }
+rand = { version = "0.8", optional = true }
 take_mut = { version = "0.2", optional = true }
 
 # Postgres dependencies
@@ -35,6 +41,10 @@ async-postgres = { version = "0.5", optional = true }
 async-std = { version = "1.12", features = ["attributes"], optional = true }
 bytes = { version = "0.5", optional = true }
 tokio-postgres = { version = "0.5", default-features = false, features = ["runtime"], optional = true }
+
+# Example dependencies
+clap = { version = "4.2", features = ["derive", "env"], optional = true }
+url = { version = "2.3", optional = true }
 
 [dev-dependencies]
 proptest = "1.1"
