Add Star Wars example with many-to-many relations

--- a/relational-graphql/Cargo.toml
+++ b/relational-graphql/Cargo.toml
@@ -8,6 +8,10 @@ authors = ["Jeb Bearer <jeb.bearer@gmail.com>"]
 name = "library"
 required-features = ["examples"]
 
+[[example]]
+name = "star-wars"
+required-features = ["examples"]
+
 [features]
 default = ["postgres"]
 sql = ["convert_case", "futures", "itertools", "rand", "take_mut"]
