--- a/relational-graphql/Cargo.toml
+++ b/relational-graphql/Cargo.toml
@@ -14,7 +14,7 @@ required-features = ["examples"]
 
 [features]
 default = ["postgres"]
-sql = ["convert_case", "futures", "itertools", "rand", "take_mut"]
+sql = ["convert_case", "futures", "itertools", "rand"]
 postgres = ["sql", "async-postgres", "async-std", "bytes", "tokio-postgres"]
 examples = ["postgres", "clap", "url"]
 mocks = ["sql"]
@@ -38,7 +38,6 @@ convert_case = { version = "0.6", optional = true }
 futures = { version = "0.3", optional = true }
 itertools = { version = "0.10", optional = true }
 rand = { version = "0.8", optional = true }
-take_mut = { version = "0.2", optional = true }
 
 # Postgres dependencies
 async-postgres = { version = "0.5", optional = true }
