Support basic textual search.
This implementation uses Postgres-specific functions for tokenizing
documents, discarding irrelevant words, collapsing synonyms, and
finding matches. Searches are not yet indexed, the entire document
is searched on demand every time. An index will be added in the
next change.

Addresses #23 except for the indexing part.

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -28,6 +28,10 @@ jobs:
       - name: Install Nix
         uses: cachix/install-nix-action@v21
 
+      - name: Doc Tests
+        run: |
+          nix develop -c cargo test --release --all-features --doc
+
       - name: Generate Documentation
         run: |
           nix develop -c cargo doc --workspace --no-deps --lib --release
